# MiniWasilni

./: .gitignore  CMakeLists.txt  MiniWasilni  README.md  main.cpp  setSizes
 MiniWasilnigraph/: README.md
 MiniWasilnigraph/include/: Graph.hpp
 MiniWasilnigraph/src/: Graph.cpp  GraphSTL.h  graph.h  main.cpp
MiniWasilniGraph/include/: Dijkstra.hpp
MiniWasilniGraph/src/: Graph.cpp  graph.h  main.cpp
MiniWasilnigraph.xcodeproj/: project.pbxproj
MiniWasilnigraph.xcodeproj/project.xcworkspace/xcuserdata/mishkatahmed.xcuserdatad/: UserInterfaceState.xcuserstate
MiniWasilnigraph.xcodeproj/xcuserdata/mishkatahmed.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
MiniWasilnigraph.xcodeproj/xcuserdata/mishkatahmed.xcuserdatad/xcschemes/: xcschememanagement.plist
MiniWasilnigraph/src/: Graph.cpp  graph.h  main.cpp
data/: circular_graph.txt  complete_graph.txt  dummy.txt  european_cities.txt  graph1.txt  graph2.txt  grid_graph.txt  khartoum.txt  star_graph.txt  test_hierarchical.txt  tree_graph.txt  usa_cities.txt
include/: AStar.hpp  BSF.h  BSF.hpp  Dijkstra.hpp  FindPath.hpp  Graph.hpp  IOManager.hpp  Traversal.hpp  Utilities.hpp
include/gui/: MainWindow.hpp
src/: AStar.cpp  BSF.cpp  BSF.h  Dijkstra.cpp  FindPath.cpp  Graph  Graph.cpp  IOManager.cpp  Traversal.cpp  Utilities.cpp  main  main.cpp  tempCodeRunnerFile.cpp
src/gui/: MainWindow.cpp  MainWindow.cpp.bak  SimpleCMakeLists.txt  SimpleCMakeLists2.txt  SimpleMainWindow.cpp  SimpleMainWindow.hpp  main.cpp  simple_gui_main.cpp  simple_main.cpp
src/gui/build_test/: SimpleMainWindowTest
src/gui/build_test/SimpleMainWindowTest_autogen/: deps  mocs_compilation.cpp
(+2 files in other folders)
